--- a/index.css
+++ b/index.css
@@ -1,8 +1,47 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 body{
-    background: #578776;
+    background: #e2c9e4;
 
 }
-
 .logo{
+    display: flex;
+    justify-content: center;
+}
+.logo img{
+    background: #000;
     
+    margin: 1vh;
+    align-content: center center;
+    border: 0.5vw dotted;
+    border-color: #243d5e;
+    border-radius: 5px;
+    padding: 2vw;
+}
+.header{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50px;
+}
+.header-elements{
+    padding: 25px;
+    
+    border: #243d5e solid;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #270202;
+    font-size: 20px;
+}
+.header-elements a{
+    text-decoration: none;
+}
+.nav{
+    /* position: fixed; */
+    display: block;
 }
