--- a/index.css
+++ b/index.css
@@ -50,18 +50,27 @@ a:visited{
     display: flex;
     justify-content:space-between;
     flex-direction: row;
-    padding-bottom: 25vh;
+    margin-bottom: 15vh;
+    flex-direction: column;
+    background: var(--purple);
+    border-bottom: var(--orange) solid 0.5vh;
+    padding-bottom: 3vh;
+}
+.photos{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
 }
 .home_text{
-    margin-top:5vh;
+    margin-top:5vw;
     display: flex;
-    align-items:center;
+    justify-content: center;
 }
 .home-text{
     display: flex;
     flex-direction: column;
-    align-items:flex-end;
-    font-size: 3vh;
+    align-items:center;
+    font-size: 2.5vw;
 }
 
 
